@@ -9,7 +9,9 @@
 #include "eloader.h"
 #include "graphics.h"
 
-char folders[NB_FOLDERS][FOLDERNAME_SIZE] ;
+
+
+char folders[NB_FOLDERS][FOLDERNAME_SIZE];
 
 char * cacheFile = HBL_ROOT"menu.cache";
 
@@ -20,19 +22,88 @@ int nbFiles;
 
 void *frameBuffer = (void *)0x44000000;
 
+void readEbootName(const char * filename, char* name) {
+
+	typedef struct {
+		char signature[4];
+		int version;
+		int offset[8];
+	}PBPHeader;
+
+	typedef struct {
+		char signature[4];
+		int version;
+		int offset_key_table;
+		int offset_values_table;
+		int num_entries; 
+	}PSFHeader;
+
+	int fid; // file id
+	unsigned char index_table[MAX_INDEX_TABLE_SIZE][16];
+	PBPHeader pbpHeader;	
+	PSFHeader psfHeader;
+
+	LOGSTR1("File is [%s]\n",(u32)filename);
+	if(!(fid = sceIoOpen(filename, PSP_O_RDONLY, 0777)))
+	{
+		LOGSTR0("File is NULL");		
+	} 
+	else 
+	{
+		/* PBP SECTION */
+		sceIoRead(fid, &pbpHeader, sizeof(pbpHeader)); // read in pbp header
+		if(!(pbpHeader.signature[1] == 'P' && pbpHeader.signature[2] == 'B' && pbpHeader.signature[3] == 'P')) 
+		{ 
+			strcpy(name,"Corrupt or invalid PBP");
+			LOGSTR0("File not a PBP\n");
+			return;
+		} 
+
+		/* PSF SECTION */
+		sceIoLseek(fid, pbpHeader.offset[0] , PSP_SEEK_SET ); // seeks to psf section - first entry in pbp offset table
+		sceIoRead(fid,&psfHeader, sizeof(psfHeader));											// reads in psf header
+
+		sceIoRead(fid,&index_table,((sizeof(unsigned char) * 16 ) * psfHeader.num_entries));
+		LOGSTR1("PSF number of Entries [%d]\n", psfHeader.num_entries);
+
+		// builds offset [offset_key + Offset_data_value + (data_align * 2)]
+		int seek_offset = index_table[(psfHeader.num_entries - 1)][OFFSET_KEY_NAME] + index_table[(psfHeader.num_entries - 1)][OFFSET_DATA_VALUE] + 	(index_table[(psfHeader.num_entries - 1)][DATA_ALIGN] * 2);
+
+		// some offset are not even numbers so they read in some off the null padding
+		if (seek_offset % 2 > 0)
+		{
+			seek_offset++;
+		}
+
+		LOGSTR1("PSF using offset [%d]\n", seek_offset);
+	
+		sceIoLseek(fid, seek_offset, PSP_SEEK_CUR);
+		sceIoRead(fid,name, (sizeof(char) * index_table[(psfHeader.num_entries - 1)][SIZE_OF_VALUE]));
+
+		LOGSTR1("Name is [%s]\n",(u32)name);
+	}
+
+	sceIoClose(fid);
+}
 /**
 * C++ version 0.4 char* style "itoa":
 * Written by Lukás Chmela
 * Released under GPLv3.
 */
-char* itoa(int value, char* result, int base) {
+char* itoa(int value, char* result, int base) 
+{
 	// check that the base if valid
-	if (base < 2 || base > 36) { *result = '\0'; return result; }
+	if (base < 2 || base > 36) 
+	{ 
+		*result = '\0'; 
+		return result; 
+	}
 	
 	char* ptr = result, *ptr1 = result, tmp_char;
 	int tmp_value;
 	
-	do {
+	do 
+	{
 		tmp_value = value;
 		value /= base;
 		*ptr++ = "zyxwvutsrqponmlkjihgfedcba9876543210123456789abcdefghijklmnopqrstuvwxyz" [35 + (tmp_value - value * base)];
@@ -41,7 +112,8 @@ char* itoa(int value, char* result, int base) {
 	// Apply negative sign
 	if (tmp_value < 0) *ptr++ = '-';
 	*ptr-- = '\0';
-	while(ptr1 < ptr) {
+	while(ptr1 < ptr) 
+	{
 		tmp_char = *ptr;
 		*ptr--= *ptr1;
 		*ptr1++ = tmp_char;
@@ -105,23 +177,23 @@ int not_homebrew(const char * name)
     return 1;
 }
 
-void init()
+int init(char* menuData)
 {
+
  	int i;
 	SceUID id;
 	SceIoDirent entry;
-	
 	nbFiles = 0;
 	for (i = 0; i < NB_FOLDERS; ++i)
 		folders[i][0] = 0;
-	
   	id = sceIoDopen(ebootPath);
+
   	if (id < 0) 
 	{
     	LOGSTR1("FATAL: Menu can't open directory %s \n", (u32)ebootPath);
         printTextScreen(0, 205 , "Unable to open GAME folder (syscall issue?)", 0x000000FF);
     	loadCache();
-    	return;
+    	return 1;
   	}	
   
  	memset(&entry, 0, sizeof(SceIoDirent));
@@ -141,6 +213,30 @@ void init()
 	
   	sceIoDclose(id);
 	
+	char fileBuffer[FILE_BUFFER_SIZE];
+	char EbootName[MAX_NAME_SIZE];
+
+	// clear the array, seems to be alot of trash left in memory
+	for(i = 0; i < NB_FOLDERS; i++ ) 
+	{
+		memset(&menuData[i * MAX_NAME_SIZE],'\0',MAX_NAME_SIZE);
+	}
+
+	for(i = 0; i < nbFiles; i++) 
+	{
+		memset(fileBuffer,'\0',FILE_BUFFER_SIZE);
+		memset(EbootName,'\0',MAX_NAME_SIZE);
+
+		// builds path to eboot	
+		strcat(fileBuffer, ebootPath);
+		strcat(fileBuffer, folders[i]);
+		strcat(fileBuffer, "/EBOOT.PBP");
+
+		readEbootName(fileBuffer, EbootName);
+		strcpy(&menuData[MAX_NAME_SIZE*i],EbootName);
+
+	}
+
   	if (!nbFiles) 
 	{
         printTextScreen(0, 205 , "No files found in GAME folder (syscall issue?)", 0x000000FF);
@@ -148,9 +244,10 @@ void init()
   	}
 	
 	saveCache();
+	return 0;
 }
  
-void refreshMenu(int offSet)
+void refreshMenu(int offSet, char* menuData, int loadedCache)
 {
   	int i;
 	u32 color;
@@ -160,7 +257,15 @@ void refreshMenu(int offSet)
     	color = 0x00FFFFFF;
     	if (i == currentFile)
         	color = 0x0000FFFF;
-    	printTextScreen(0, 15 + (i - offSet) * 12, folders[i], color);
+
+		if (loadedCache == 1)
+		{
+    		printTextScreen(0, 15 + (i - offSet) * 12, folders[i], color);
+		}
+		else
+		{
+			printTextScreen(0, 15 + (i - offSet) * 12, &menuData[MAX_NAME_SIZE*i], color);
+		}
   	}
 }
 
@@ -176,8 +281,9 @@ void _start() __attribute__ ((section (".text.start")));
 void _start()
 {
 	SceCtrlData pad; // variable to store the current state of the pad
-	
-    int menuOffSet = 0;
+
+	char menuEntry[NB_FOLDERS][MAX_NAME_SIZE];
+	int menuOffSet = 0;
 	char buffer[20];
 	
     currentFile = 0;
@@ -193,9 +299,10 @@ void _start()
     SetColor(0x00000000);
 
     //load folder's contents
-    init();
+	// if it loads the cache we want it to display folders[*], menuEntry would be empty
+    int loadSucess = init(&menuEntry[0][0]);
     
-    refreshMenu(0);
+    refreshMenu(0, &menuEntry[0][0], loadSucess);
 	
     sceKernelDelayThread(100000);
 	
@@ -213,7 +320,7 @@ void _start()
             currentFile++;
 			if(currentFile >= (MAXMENUSIZE + menuOffSet) && (nbFiles - 1) >= (MAXMENUSIZE + menuOffSet))
 				menuOffSet++;
-			refreshMenu(menuOffSet);
+			refreshMenu(menuOffSet, &menuEntry[0][0], loadSucess);
 
         }
 		else if ((pad.Buttons & PSP_CTRL_UP) && (currentFile > 0) )
@@ -221,7 +328,7 @@ void _start()
             currentFile--;
 			if(currentFile ==  menuOffSet && menuOffSet != 0)
 				menuOffSet--;
-			refreshMenu(menuOffSet);
+			refreshMenu(menuOffSet, &menuEntry[0][0], loadSucess);
         }
 		else if(pad.Buttons & PSP_CTRL_TRIANGLE) 
 		{
